Se agregaron controladores de datos, se agrego la carpeta del esquema para un mejor control, se agregaron imagenes, se modifiacion estilos css, se modifico estilos html y rutas.

--- a/Public/Views/Pokedex.html
+++ b/Public/Views/Pokedex.html
@@ -4,9 +4,93 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Public/Styles/style.css">
     <title>Pokedex</title>
 </head>
 <body>
-    <h1>Pokedex</h1>
+    <header>
+        <nav class="nav">
+            <img src="" alt="logo">
+            <div>
+                <input type="search" name="" id="" placeholder="Search Pokemon | Id">
+                <input type="button" value="">
+            </div>
+            <div>
+                <p>Api | Db</p>
+            </div>     
+        </nav>
+    </header>
+    <div class="conteiner">
+        <div class="filters">
+            <div>
+                <div>
+                    <button>5</button>
+                    <button>10</button>
+                    <button>50</button>
+                    <button>100</button>
+                </div>
+            </div>
+            <div>
+                <select name="Asc" id="">Asc</select>
+                <select name="Types" id="">Types</select>
+            </div>         
+        </div>
+        <main class="main">
+            <div class="card-pokemon">
+                <p>Pokename | N°$</p>
+                <img src="" alt="pokemon">
+                <input type="submit" value="">
+            </div>
+            <div class="card-pokemon">
+                <p>Pokename | N°$</p>
+                <img src="" alt="pokemon">
+                <input type="submit" value="">
+            </div>
+            <div class="card-pokemon">
+                <p>Pokename | N°$</p>
+                <img src="" alt="pokemon">
+                <input type="submit" value="">
+            </div>
+            <div class="card-pokemon">
+                <p>Pokename | N°$</p>
+                <img src="" alt="pokemon">
+                <input type="submit" value="">
+            </div>
+            <div class="card-pokemon">
+                <p>Pokename | N°$</p>
+                <img src="" alt="pokemon">
+                <input type="submit" value="">
+            </div>
+            <div class="card-pokemon">
+                <p>Pokename | N°$</p>
+                <img src="" alt="pokemon">
+                <input type="submit" value="">
+            </div>
+            <template>
+                <div>
+                    <p>Pokename | N°$</p>
+                    <img src="" alt="pokemon">
+                    <input type="submit" value="">
+                </div>
+            </template>
+            <div class="pagination">
+                <input type="button" value="">
+                <div>
+                    <input type="button" value="">
+                </div>
+                <img src="" alt="arrow">
+            </div>
+        </main>
+    </div>
+    <footer class="footer">
+        <div>
+            <img src="" alt="Git">
+            <p>Git link</p>
+        </div>
+        <div>
+            <img src="" alt="LinkedIn">
+            <p>LinkedIn link</p>
+        </div>
+    </footer>
 </body>
 </html>
