--- a/Public/Styles/style.css
+++ b/Public/Styles/style.css
@@ -2,6 +2,7 @@
     margin: 0;
 }
 
+
 .home__background {
     width: 100%;
     height: 100vh;
@@ -41,4 +42,53 @@
     0%{transform: scale(1.3);}
     50%{transform: scale(1.6);}
     100%{transform: scale(1.3);}
+}
+
+.nav {
+    width: 100%;
+    height: 10vh;
+    background-color: #CC0B0B;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.conteiner {
+    height: 80vh;
+    overflow-y: auto;
+    background: url('../Assets/img/background.jpg') no-repeat;
+    background-size: cover;
+}
+
+.filters {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer {
+    height: 10vh;
+    justify-content: space-around;
+    display: flex;
+    background-color: #CC0B0B;
+    align-items: center;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+.card-pokemon {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 15px 0;
+}
+
+.pagination {
+    display: flex;
+    width: 100%;
+   justify-content: space-around;
 }
