Se cambio nombres de clases para hacer una nomenclatura mas correcta

--- a/Public/Views/footer.pug
+++ b/Public/Views/footer.pug
@@ -1,10 +1,10 @@
 block content
-footer(class="footer")
-    div(class="footer_box-logos")
-        a(href="")
-            img(class="footer_logos" src="Public/Assets/img/GitHub-Logo.png" alt="Git") 
+footer.footer.flex
+    div.footer_box.flex
+        a( href="https://github.com/FedericoF03").footer_links.flex
+            img( src="/Public/Assets/img/GitHub-Logo.png" alt="Git").footer_logos.flex
             p Git link
-    div(class="footer_box-logos")
-        a(href="")
-            img(class="footer_logos" src="Public/Assets/img/Linkedin-In-Logo.png" alt="LinkedIn")
+    div.footer_box.flex
+        a( href="https://www.linkedin.com/in/federico-fernandez-ff/").footer_links.flex
+            img(src="/Public/Assets/img/Linkedin-In-Logo.png" alt="LinkedIn").footer_logos.flex
             p LinkedIn link
