--- a/Public/Views/Home.html
+++ b/Public/Views/Home.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Public/Styles/style.css">
-    <title>Home Pokedex</title>
+    <title>Home</title>
 </head>
 <body>
-    <div class="home__background">
-        <div class="home-content">
-            <div class="home__conteiner-logotype">
-                <img class="home_logotype" src="Public/Assets/img/poke-logo.png" alt="">
-                <img class="home_logotype home_logotype-back" src="Public/Assets/img/poke-logo.png" alt="">
+    <div class="home-background">
+        <div class="home-conteiner">
+            <div class="conteiner-logotype">
+                <img class="conteiner-logotype__logotype" src="Public/Assets/img/poke-logo.png" alt="">
+                <img class="conteiner-logotype__logotype conteiner-logotype__logotype--effect" src="Public/Assets/img/poke-logo.png" alt="">
             </div>
-            <h1 class="home__title"><a href="/Pokedex">Press Start</a></h1>
+            <h1 class="home-conteiner__title"><a href="/Pokedex">Press Start</a></h1>
         </div>
     </div>
 </body>
