--- a/Public/Views/Pokedex.pug
+++ b/Public/Views/Pokedex.pug
@@ -1,48 +1,53 @@
 extends header.pug
 
 block content 
-    div(class="conteiner")
-        div(class="filters")
-            div(class="box__limits")
-                div(class="box__input-limit")
-                    button(id="click" class="input__limit") 5
-                    button(id="click" class="input__limit") 20
-                    button(id="click" class="input__limit") 50
-                    button(id="click" class="input__limit") 100
-            div(class="box_filters")
-                select(form="test" class="filters_asc" id="selectType" name="Types")
+    div.conteiner#conteiner
+        div.conteiner-pokedex__conteiner-filters.flex
+            div.conteiner-filters__conteiner-limits
+                div.limits__box.flex
+                    button.input__limits#inputLimit 5
+                    button.input__limits#inputLimit 20
+                    button.input__limits#inputLimit 50
+                    button.input__limits#inputLimit 100
+            div.types__box.flex
+                select.select__type#selectType
                     option(value="") All
-                    each value in locals.allTypes
-                        if value.name !== 'unknown'
-                            option=value.name
-                select(class="filters_type" id="selectOrder")
+                    each types in locals.allTypes
+                        if types.name !== 'unknown'
+                            option=types.name
+                select.select__order#selectOrder
                     optgroup(label="Id")
                         option( value="asc") Asc
                         option( value="desc") Desc
                     optgroup(label="alphabetical")
                         option( value="a-z") A-Z
                         option( value="z-a") Z-A
-        main.main
-            div.conteiner__pokes#backPoke
+        main.main.flex
+            div.conteiner__pokes.flex#backPoke
                 each value in locals.allPokes
-                    div(class="box__pokemon")
-                        p(class="name__pokemon" id="namePoke")= value.names
-                        img(class="img__pokemon" id="imgPoke" src=`${value.sprites[0]}` alt=`${value.names}`)
-                        div(class="input__box")
-                            a(class="input_link" id="linkPoke" href=`/pokemon/${value.names}`) Catch!
-                            img(class="img__input-pokeball" src="Public/Assets/img/Pokeball.png" alt="Pokeball link")
-            div(class="pagination")
-                input(class="add-db" type="button" value="+")
-                div(class="box_pagination" id="paginations")
+                    div.conteiner__pokes__box-poke.flex
+                        p.box-poke__name-poke#namePoke= value.names
+                        img( src=`${value.sprites[0]}` alt=`${value.names}`).box-poke__img-poke#imgPoke
+                        div.box-poke__input-poke.flex
+                            a(href=`/pokemon/${value.names}`).input-poke__link#linkPoke
+                                div 
+                                    p.input-poke__link catch!
+                                    img(src="Public/Assets/img/Pokeball.png" alt="Pokeball link").input-poke__link-img
+            div.conteiner-pagination.flex
+                input( type="button" value="+").conteiner-pagination__add-db
+                div.conteiner-pagination__box-pagination.flex#paginations
                     -let number = -1
+                    -let offsetNow = locals.limit * number
                     while parseInt(number++) < Math.floor( locals.count / locals.limit )
-                        button( id="pag" class="pagination_button" type="submit" value=`${(locals.limit * number)}`)= number
-                img(class="arrow-top" src="Public/Assets/img/arrow.png" alt="arrow")
-            form(action="" id="createForm" method="get")
-                input(type="hidden" id="hiddenOffset" name="offset" value=`${locals.offset}`)
-                input(type="hidden" id="hiddenLimit" name="limit" value=`${locals.limit}`)
-                input(type="hidden" id="hiddenOrder" name="order" value=`${locals.offset}`)
-    script(src="Public/Js/front.js") 
+                        if((locals.limit * (number - 3)) < locals.offset && locals.offset < (locals.limit * (number + 3)) )
+                            if (locals.limit * number == locals.offset)
+                                button( type="submit" value=`${(locals.limit * number)}`).box-pagination__pag-button.flex.pag_now#pag= number
+                            else
+                                button( type="submit" value=`${(locals.limit * number)}`).box-pagination__pag-button.flex#pag= number
+                img( src="/Public/Assets/img/arrow.png" alt="arrow").conteiner-pagination__arrow-top.arrow.arrow-right#arrow
+            form(action="" method="get")#createForm
+                input(type="hidden" name="offset" value=`${locals.offset}`)#hiddenOffset
+                input(type="hidden" name="limit" value=`${locals.limit}`)#hiddenLimit
+                input(type="hidden" name="order" value=`${locals.order}`)#hiddenOrder
+    script(type="module" src="/Public/Js/front.js") 
     include footer.pug
-
-//- locals.count
