--- a/Public/Views/header.pug
+++ b/Public/Views/header.pug
@@ -10,7 +10,7 @@ body
     header
         nav.nav.flex
             a(href="/").nav__logo
-                img(src="/Public/Assets/img/logo.gif" alt="logotype").nav__logo
+                img(src="/Public/Assets/logo.gif" alt="logotype").nav__logo
             div.nav__conteiner-search.flex
                 input(type="search" placeholder="Search Pokemon / Id").search__input-search#searchPokemon
                 input(type="button").search__input-button#inputSearch
