--- a/Public/Views/Home.html
+++ b/Public/Views/Home.html
@@ -11,8 +11,8 @@
     <div class="home-background">
         <div class="home-conteiner">
             <div class="conteiner-logotype">
-                <img class="conteiner-logotype__logotype" src="Public/Assets/img/poke-logo.png" alt="">
-                <img class="conteiner-logotype__logotype conteiner-logotype__logotype--effect" src="Public/Assets/img/poke-logo.png" alt="">
+                <img class="conteiner-logotype__logotype" src="Public/Assets/poke-logo.png" alt="">
+                <img class="conteiner-logotype__logotype conteiner-logotype__logotype--effect" src="Public/Assets/poke-logo.png" alt="">
             </div>
             <h1 class="home-conteiner__title"><a href="/Pokedex">Press Start</a></h1>
         </div>
