--- a/Public/Views/Pokedex.pug
+++ b/Public/Views/Pokedex.pug
@@ -32,9 +32,9 @@ block content
                             a(href=`/pokemon/${value.names}`).input-poke__link#linkPoke
                                 div 
                                     p.input-poke__link catch!
-                                    img(src="Public/Assets/img/Pokeball.png" alt="Pokeball link").input-poke__link-img
+                                    img(src="Public/Assets/Pokeball.png" alt="Pokeball link").input-poke__link-img
             div.conteiner-pagination.flex
-                input( type="button" value="+").conteiner-pagination__add-db
+                a(href="/db/addDB" ).conteiner-pagination__add-db +
                 div.conteiner-pagination__box-pagination.flex#paginations
                     -let number = -1
                     -let offsetNow = locals.limit * number
@@ -44,10 +44,10 @@ block content
                                 button( type="submit" value=`${(locals.limit * number)}`).box-pagination__pag-button.flex.pag_now#pag= number
                             else
                                 button( type="submit" value=`${(locals.limit * number)}`).box-pagination__pag-button.flex#pag= number
-                img( src="/Public/Assets/img/arrow.png" alt="arrow").conteiner-pagination__arrow-top.arrow.arrow-right#arrow
+                img( src="/Public/Assets/arrow.png" alt="arrow").arrow.arrow-right#arrow
             form(action="" method="get")#createForm
                 input(type="hidden" name="offset" value=`${locals.offset}`)#hiddenOffset
                 input(type="hidden" name="limit" value=`${locals.limit}`)#hiddenLimit
                 input(type="hidden" name="order" value=`${locals.order}`)#hiddenOrder
-    script(type="module" src="/Public/Js/front.js") 
+    script(type="module" src="/Public/Js/Listeners.js") 
     include footer.pug
