cambiando algunos errores en los enlaces

--- a/Public/views/Pokedex.pug
+++ b/Public/views/Pokedex.pug
@@ -32,7 +32,7 @@ block content
                             a(href=`/pokemon/${value.names}`).input-poke__link#linkPoke
                                 div 
                                     p.input-poke__link catch!
-                                    img(src="/Public/Assets/Pokeball.png" alt="Pokeball link").input-poke__link-img
+                                    img(src="/Public/Assets/pokeball.png" alt="Pokeball link").input-poke__link-img
             div.conteiner-pagination.flex
                 a(href="/db/addDB" ).conteiner-pagination__add-db +
                 div.conteiner-pagination__box-pagination.flex#paginations
