--- a/Public/Styles/style.css
+++ b/Public/Styles/style.css
@@ -1,6 +1,6 @@
 * {
     margin: 0;
-    font-family: roboto, sans-serif;
+    font-family: 'Exo 2', Roboto, sans-serif, 'Open Sans', 'Helvetica Neue';
     text-decoration: none;
 }
 
@@ -21,6 +21,8 @@
     justify-content: center;
 }
 
+
+
 .conteiner-logotype {
     position: relative;
     width: 70%;
@@ -38,13 +40,32 @@
 .home-conteiner__title {
     width: max-content;
     margin: 0 auto;
+    font-size: 2rem;
+    animation: animation-title 3s infinite;
+}
+
+.home-conteiner__title > a { 
+    text-transform: uppercase;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.home-conteiner__title > a:visited { color: #000000; }
+
+.home-conteiner__title>a::before {
+    content: "<";
+    animation: animation-title 3s infinite;
+}
+
+.home-conteiner__title>a::after {
+    content: ">";
     animation: animation-title 3s infinite;
 }
 
 @keyframes animation-title {
-    0%{transform: scale(1.3);}
-    50%{transform: scale(1.6);}
-    100%{transform: scale(1.3);}
+    0%{transform: scale(1.2);}
+    50%{transform: scale(1.4);}
+    100%{transform: scale(1.2);}
 }
 
 .nav {
@@ -66,6 +87,7 @@
 .search__input-search {
     max-width: 80%;
     border: none; 
+    padding: 2px 3px;
 }
 
 .search__input-button {
@@ -73,7 +95,10 @@
     width: 20px;
     background: url('../Assets/lupa.png') no-repeat #FF5353;
     background-size: contain;
+    padding: 2px;
     border-radius: 0 8px 8px 0;
+    box-sizing: content-box;
+    cursor: pointer;
 }
 
 .conteiner-mode {
@@ -81,6 +106,7 @@
     color: #ffff;
     border: none;
     padding: 0.4rem;
+    cursor: pointer;
 }
 
 .nav__conteiner-mode--desactivate {
@@ -120,11 +146,14 @@
     background: url('../Assets/limit.png') no-repeat center;
     background-size: contain;
     width: 30px;
+    min-width: 30px;
     height: 30px;
     padding: 0;
     border-radius: 50px;
-    font-weight: 800;
-    text-align: center; 
+    font-weight: 700;
+    font-size: larger;
+    text-align: center;
+    cursor: pointer;
 }
 
 .types__box {
@@ -137,6 +166,7 @@
     width: 50%;
     max-width: 200px;
     border-radius: 50px;
+    position: relative;
 }
 
 .select__order {
@@ -144,6 +174,7 @@
     max-width: 200px;
     border-radius: 15px;
     margin-left: 50%;
+    cursor: pointer;
 }
 
 .main {
@@ -178,8 +209,7 @@
     padding: 0.2rem 0.4rem;
     border-radius: 8px;
     font-size: 1.5rem;
-    width: max-content;
-    height: max-content;
+    text-align: center;
 }
 
 .box-poke__name-poke--margin { margin: 15px 0;}
@@ -187,7 +217,13 @@
 .box-poke__img-poke { 
     max-width: 200px; 
     width: 100%;
+    cursor: pointer;
 }
+
+.box-poke__img-poke:hover { 
+    transform: scaleX(-1);
+}
+
 
 
 .box-poke__input-poke {
@@ -198,9 +234,23 @@
 .input-poke__link {
     text-align: center;
     position: relative;
-    top: 15px;
+    top: 0.1rem;
     text-decoration: none;
     color: #FFFFFF;
+}
+
+.input-poke__link:hover {
+    animation: rotate 3.5s infinite .1s;
+}
+
+
+
+@keyframes rotate {
+    0% {transform: rotate(0deg);}
+    25% {transform: rotate(15deg);}
+    50% {transform: rotate(0deg);}
+    75% {transform: rotate(-15deg);}
+    100% {transform: rotate(0deg);}
 }
 
 .input-poke__link-img { width: 80px; }
@@ -225,27 +275,27 @@
 
 .conteiner-pagination__box-pagination {
     background-color: #21293E;
-    padding: 0.5rem 0.8rem;
+    padding: 0.5rem 0.4rem;
     border-radius: 15px;
-    max-width: 150px;
     gap: 5px;
+    max-width: max-content;
     height: min-content;
     justify-content: flex-start;
 }
 
 .box-pagination__pag-button {
     background: url('../Assets/pag.png') no-repeat center;
-    background-size: contain;
+    background-size: cover;
     margin: 0;
     height: 25px;
     border-radius: 50px;
     padding: 0;
     font-weight: 900;
-    font-size: 1.2rem;
     border: 0.1rem solid #8b8b8b;
     min-width: 25px;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 
 .conteiner-pagination__add-db {
@@ -255,6 +305,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
 
 .footer {
@@ -294,15 +345,18 @@
     position: relative;
 }
 
-.background-color {
+.background {
     width: 90%;
-    background-color: #9aef58;
     margin: 10px auto;
     border-radius: 20px;
     align-items: center;
     flex-direction: column;
     gap: 15px;
     padding-bottom: 1rem;
+}
+
+.background-dinamic {
+    background-color: #9aef58;
 }
 
 .conteiner-pokemon {
@@ -322,7 +376,6 @@
     position: fixed;
     top: 10vh;
     left: 0;
-    display: none;
     background-color: #142716cc;
     width: 100%;
     height: 80vh;
@@ -343,6 +396,7 @@
     border-radius: 50px;
     border: none;
     background-color: #ffffff;
+    cursor: pointer;
 }
 
 .fav-button--radius {
@@ -351,6 +405,7 @@
     height: 40px;
     width: 40px;
     padding: 0;
+    cursor: pointer;
 }
 
 .fav-button__fav-logo { 
@@ -375,7 +430,6 @@
 }
 
 .background-data {
-    background-color: #008000;
     width: 90%;
     max-width: 330px;
     border-radius: 8px;
@@ -383,8 +437,11 @@
     padding: 0.5rem;
 }
 
-.moves-data {
+.background-data--dinamic {
     background-color: #008000;
+}
+
+.moves-data {
     width: 90%;
     max-width: 330px;
     height: 166px;
@@ -408,9 +465,10 @@
 .types { width: 49%; }
 
 .conteiner-varierities {
-    flex-direction: column;
     gap: 5px;
-    height: min-content;
+    width: 50%;
+    flex-direction: column;
+    height: max-content;
     overflow-y: auto;
 }
 
@@ -428,7 +486,8 @@
 }
 
 .bar-front {
-    width: 30%;
+    width: 0%;
+    transition: width 1s;
     height: 20px;
     border-radius: inherit;
 }
@@ -457,7 +516,10 @@
 
 .bar-front--pink { background-color: #f3189f; }
 
-.stat-text { width: max-content; }
+.stat-text { 
+    width: max-content;
+    margin-left: 10px;
+ }
 
 .flex { display: flex; }
 
@@ -481,6 +543,7 @@
     bottom: 15vh;
     right: 0;
     display: none;
+    cursor: pointer;
 }
 
 .arrow-evolution { 
@@ -495,6 +558,8 @@
     outline: #000000 solid 1px;
     outline-offset: 4px;
     padding: 8px;
+    font-size: 1rem;
+    font-family: 'Press Start 2P', 'Exo 2', Roboto, sans-serif, 'Open Sans', 'Helvetica Neue';
     margin: 20px;
 }
 
@@ -504,7 +569,237 @@
     background-color: #a52a2a;
     height: min-content;
     padding: 20px 15px;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     border-radius: 3px;
+}
+/* test */
+.center {
+    margin: auto;
+}
+
+.add-button {
+    max-width: 50px;
+}
+
+.option {
+  
+}
+
+.type-button {
+    width: 100%;
+    max-width: 200px;
+    border: #343232 solid 0.1rem;
+    border-radius: 50px;
+    position: relative;
+    margin-right: auto; 
+    cursor: pointer;
+}
+
+.ul {
+    position: absolute;
+    background-color: aliceblue;
+    list-style: none;
+    width: 100%;
+    text-align: center;
+    border:#767676 solid 1px;
+    flex-direction: column;
+    gap: 5px;
+    height: 100px;
+    overflow-y: auto;
+    padding-inline-start: 0;
+}
+
+.ul > li, ul > li >a:visited, ul > li > a:active, ul > li > a {
+    color: #000000;
+    padding: 5px 0;
+}
+
+
+.ul > li:hover {
+    background-color: #26A0DA;
+}
+
+.nones {
+    display: none;
+}
+
+.test2arrow {
+    width: 20px;
+    background-color: #FFFFFF;
+    border-radius: 50px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border: none;
+}
+
+.sus {
+    background-color: #DEDEDE
+}
+
+.buttontest {
+    border: none;
+    background-color: #FFFFFF;
+    border-radius: 50px;
+    width: 100%;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    cursor: pointer;
+}
+
+.add-test-title {
+    margin: 0;
+    font-size: 1.5rem;
+    font-family: 'Press Start 2P', cursive;
+}
+
+.center {
+    text-align: center;
+}
+
+.addzone {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.text-form {
+    border: none;
+    background-color: #000000;
+    color: #7A7A7A;
+    padding: 5px;
+    margin-bottom: 5px;
+    width: 90%;
+    min-width: max-content;
+    
+    
+}
+
+.text-form:focus-visible, .text-formv:focus-visible {
+    outline: none;
+    border: none;
+}
+
+.text-formv:focus-visible::placeholder, .text-form:focus-visible::placeholder {
+    background-color: #18a6f3;
+    color: #ffffffff;
+}
+
+.text-formv::placeholder, .text-form::placeholder  {
+    background-color: #18a6f3;
+    color: #ffffffff;
+    padding: 4px;
+}
+
+.text-formv {
+    border: none;
+    background-color: #000000;
+    color: #7A7A7A;
+    padding: 5px;
+    margin-bottom: 5px;
+    min-width: max-content;
+}
+
+.arrowbuttonstest {
+    background-color: #C52831;
+    padding: 8px 4px;
+    border: #675854 groove  2px;
+    color: #ffffffff;
+    font-size: xx-small;
+    cursor: pointer;
+    font-family: 'Press Start 2P', cursive;
+}
+
+.arrowbuttonstest:hover {
+    background-color: #c2161e;
+}
+
+.subform {
+    background-color: #3287C3;
+    background-image: url('../Assets/testback.png');
+    background-size: cover;
+    border: black groove 2px;
+    border-radius: 10px;
+    padding: 10px;
+    color: #ffffffff;
+    cursor: pointer;
+}
+
+.subform:hover {
+    filter: brightness(1.4);
+}
+
+.abilitiesform {
+    margin: 0 5px;
+}
+
+
+.errform {
+    background-image: url('../Assets/suss.png');
+    position: relative;
+    background-size: cover;
+    top: 15px;
+    color: #ffffff;
+    padding: 5px;
+    
+}
+
+.size50 {
+    width: 50%;
+}
+
+.size60 {
+    width: 60%;
+}
+
+.ability {
+    color: #ffffff;
+    margin-right: 5px;
+    width: 50%;
+}
+
+.ability_ocult {
+    color: #ffffffa1;
+    width: 50%;
+    margin-right: 5px;
+}
+
+.ability-p {
+    width: 50%;
+    height: 1.5rem;
+    overflow: auto;
+}
+
+.ability-pv2 {
+    width: 50%;
+    overflow: auto;
+}
+
+.var {
+    width: 100%;
+}
+
+.botontesttest {
+    background-color: #80D860;
+    border: none;
+    border-radius: 2px;
+    padding: 0px 10px;
+    font-weight: 900;
+    margin-bottom: 5px;
+    cursor: pointer;
+    /* position: relative; */
+    /* bottom: 10px; */
+    font-size: xx-large;
+    text-align: center;
+}
+
+.botontesttest:hover {
+    background-color: #52df1f;
+}
+
+.testNow {
+    background-color: #000000;
 }
