--- a/Public/views/Home.html
+++ b/Public/views/Home.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Public/Styles/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,500;0,600;1,300;1,400;1,500;1,600&family=Press+Start+2P&display=swap" rel="stylesheet">
     <title>Home</title>
 </head>
 <body>
