--- a/Public/views/footer.pug
+++ b/Public/views/footer.pug
@@ -3,8 +3,8 @@ footer.footer.flex
     div.footer_box.flex
         a( href="https://github.com/FedericoF03").footer_links.flex
             img( src="/Public/Assets/GitHub-Logo.png" alt="Git").footer_logos.flex
-            p Git link
+            p Git
     div.footer_box.flex
         a( href="https://www.linkedin.com/in/federico-fernandez-ff/").footer_links.flex
             img(src="/Public/Assets/Linkedin-In-Logo.png" alt="LinkedIn").footer_logos.flex
-            p LinkedIn link
+            p LinkedIn
