--- a/Public/views/header.pug
+++ b/Public/views/header.pug
@@ -5,6 +5,7 @@ head
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     link(rel="stylesheet" href="/Public/Styles/style.css")
+    link(href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800&family=Press+Start+2P&display=swap" rel="stylesheet")
     title= title
 body 
     header
